--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <article class="example">
         This is some text
     </article>
-    <img src="">
+    <img src="Images/" id="images">
+    <button onclick="myfunction()">This is a button</button>
+    <p id="textchanged">This is text</p>
+
+
+    <script src="app.js"></script>
 </body>
 </html>
